--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Head</title>
   </head>
   <body>
-    <h1>HELLO!</h1>
+    <h1 style="color:blue;">HELLO!</h1>
     <h2>Hi!</h2>
     <h3>Hi Again</h3>
     Hello, World!
