--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <title>Head</title>
+    <style media="screen">
+      h1 {
+        color: blue;
+      }
+    </style>
   </head>
   <body>
-    <h1 style="color:blue;">HELLO!</h1>
+    <h1>HELLO!</h1>
     <h2>Hi!</h2>
     <h3>Hi!!! Again!!!</h3>
     Hello, World!
